ui.yaml
apiVersion: v1 # specifies the API version for the Service resource
kind: Service
metadata:
  name: ui-__PROJECT_NAME__
  namespace: __PROJECT_NAME__
spec:
  selector:
    app: ui-__PROJECT_NAME__
  type: NodePort
  ports:
    - name: http
      port: 3001 # port for external access to the service
      targetPort: 7860
      # protocol: TCP
      # nodePort: 30850 # The range of valid ports is 30000-32767
